例外にバイトオフセットを追加できるようにした

--- a/PDFParser/PDFParser.vcxproj
+++ b/PDFParser/PDFParser.vcxproj
@@ -80,9 +80,12 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/D DLLTEST_EXPORT /Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/Zc:twoPhase- %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <OpenMPSupport>true</OpenMPSupport>
+      <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -94,9 +97,12 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <WarningLevel>Level4</WarningLevel>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/D DLLTEST_EXPORT /Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/Zc:twoPhase- %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <OpenMPSupport>true</OpenMPSupport>
+      <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -109,8 +115,11 @@
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalOptions>/D DLLTEST_EXPORT /Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/Zc:twoPhase- %(AdditionalOptions)</AdditionalOptions>
       <OpenMPSupport>true</OpenMPSupport>
+      <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -123,8 +132,11 @@
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalOptions>/D DLLTEST_EXPORT /Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/Zc:twoPhase- %(AdditionalOptions)</AdditionalOptions>
       <OpenMPSupport>true</OpenMPSupport>
+      <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -132,37 +144,47 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="character_types.hpp" />
+    <ClInclude Include="incomplete_type_wrapper.hpp" />
+    <ClInclude Include="incomplete_type_wrapper.ipp" />
+    <ClInclude Include="pdfparser.contents_parser_errors.hpp" />
+    <ClInclude Include="pdfparser.document_error.ipp" />
     <ClInclude Include="pdfparser.ipdffstream.hpp" />
     <ClInclude Include="pdfparser.contents_parser.hpp" />
     <ClCompile Include="pdfparser.contents_parser.cpp" />
+    <ClCompile Include="pdfparser.document_error.cpp" />
     <ClCompile Include="pdfparser.document_reader.cpp" />
     <ClInclude Include="pdfparser.graphics_state_stack.hpp" />
     <ClInclude Include="pdfparser.chroma.hpp" />
     <ClInclude Include="pdfparser.graphics_state.hpp" />
+    <ClInclude Include="pdfparser.ipdfstream_errors.hpp" />
     <ClInclude Include="pdfparser.ipdfstringstream.hpp" />
+    <ClInclude Include="pdfparser.istream_extended_errors.ipp" />
     <ClInclude Include="pdfparser.line_style.hpp" />
     <ClInclude Include="pdfparser.object_stream.hpp" />
     <ClInclude Include="pdfparser.object_stream.ipp" />
+    <ClInclude Include="pdfparser.object_stream_errors.hpp" />
     <ClInclude Include="pdfparser.object_types.ipp" />
+    <ClInclude Include="pdfparser.object_types_errors.hpp" />
     <ClInclude Include="pdfparser.page_parser.hpp" />
     <ClCompile Include="pdfparser.ipdfstringstream.cpp" />
     <ClCompile Include="pdfparser.object_stream.cpp" />
     <ClCompile Include="pdfparser.page_parser.cpp" />
     <ClInclude Include="pdfparser.page_tree_parser.hpp" />
     <ClCompile Include="pdfparser.page_tree_parser.cpp" />
+    <ClInclude Include="pdfparser.page_tree_parser_errors.hpp" />
     <ClInclude Include="pdfparser.pdfcontents_builder.hpp" />
     <ClInclude Include="pdfparser.pdfpage_builder.hpp" />
+    <ClInclude Include="pdfparser.portion_of_stream.hpp" />
+    <ClInclude Include="pdfparser.portion_of_stream.ipp" />
     <ClInclude Include="pdfparser.space.hpp" />
     <ClInclude Include="pdfparser.text_style.hpp" />
     <ClInclude Include="PDFReader.PagesModel.hpp" />
     <ClInclude Include="PDFReader.PDFContents.hpp" />
     <ClInclude Include="type_traits_extended.hpp" />
     <ClInclude Include="pdfparser.document_error.hpp" />
-    <ClInclude Include="pdfparser.object_not_found_error.hpp" />
-    <ClInclude Include="pdfparser.istream_extended_error.hpp" />
+    <ClInclude Include="pdfparser.istream_extended_errors.hpp" />
     <ClInclude Include="pdfparser.istream_extended.hpp" />
     <ClInclude Include="pdfparser.object_cache.hpp" />
-    <ClInclude Include="pdfparser.parse_error.hpp" />
     <ClInclude Include="pdfparser.object_types.hpp" />
     <ClInclude Include="pdfparser.document_reader.hpp" />
     <ClInclude Include="PDFReader.PDFPage.hpp" />
@@ -172,9 +194,7 @@
     <ClInclude Include="pdfparser.ipdfstream.hpp" />
     <ClInclude Include="pdfparser.whitespace_flags.hpp" />
     <ClInclude Include="pdfparser.tokenizer.hpp" />
-    <ClInclude Include="pdfparser.tokenize_error.hpp" />
-    <ClInclude Include="variant_cast.hpp" />
-    <ClInclude Include="variant_cast.ipp" />
+    <ClInclude Include="pdfparser.tokenizer_errors.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
@@ -184,25 +204,19 @@
     <ClCompile Include="pdfparser.object_cache.cpp" />
     <ClCompile Include="pdfparser.pdfcontents_builder.cpp" />
     <ClCompile Include="pdfparser.graphics_state_stack.cpp" />
-    <ClCompile Include="pdfparser.object_not_found_error.cpp" />
     <ClCompile Include="pdfparser.pdfpage_builder.cpp" />
     <ClCompile Include="pdfparser.space.cpp" />
     <ClCompile Include="pdfparser.tokenizer.cpp" />
     <ClCompile Include="PDFReader.PagesModel.cpp" />
-    <ClCompile Include="pdfparser.parse_error.cpp" />
-    <ClCompile Include="pdfparser.istream_extended_error.cpp" />
     <ClCompile Include="pdfparser.pdftoken.cpp" />
     <ClCompile Include="pdfparser.xref_types.cpp" />
-    <ClCompile Include="pdfparser.tokenize_error.cpp" />
+    <ClInclude Include="pdfparser.tokenizer_errors.ipp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="app.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="pdfparser.object_types.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
