--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="get_contents_test.hpp" />
     <ClInclude Include="get_test.hpp" />
     <ClInclude Include="ignore_if_present_test.hpp" />
+    <ClInclude Include="length_test.hpp" />
     <ClInclude Include="literal_trim.hpp" />
     <ClInclude Include="operator++_test.hpp" />
     <ClInclude Include="get_pages_test.hpp" />
@@ -169,9 +170,11 @@
     <ClCompile Include="eof_test.cpp" />
     <ClCompile Include="get_contents_test.cpp" />
     <ClCompile Include="ignore_if_present_test.cpp" />
+    <ClCompile Include="length_test.cpp" />
     <ClCompile Include="literal_trim.cpp" />
     <ClCompile Include="get_pages_test.cpp" />
     <ClCompile Include="peek_test.cpp" />
+    <ClCompile Include="promise_test.cpp" />
     <ClCompile Include="promise_token_test.cpp" />
     <ClCompile Include="seek_forward_head_of_line_test.cpp" />
     <ClCompile Include="seek_test.cpp" />
