--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
@@ -144,42 +144,10 @@
     <None Include="data\helloworld.pdf" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="attempt_test.hpp" />
-    <ClInclude Include="attempt_token_test.hpp" />
-    <ClInclude Include="eof_test.hpp" />
-    <ClInclude Include="get_contents_test.hpp" />
     <ClInclude Include="get_test.cpp" />
-    <ClInclude Include="ignore_if_present_test.hpp" />
-    <ClInclude Include="length_test.hpp" />
     <ClInclude Include="literal_trim.hpp" />
-    <ClInclude Include="operator++_test.hpp" />
-    <ClInclude Include="get_pages_test.hpp" />
-    <ClInclude Include="no_token.hpp" />
-    <ClInclude Include="peek_test.hpp" />
-    <ClInclude Include="promise_test.hpp" />
-    <ClInclude Include="promise_token_test.hpp" />
-    <ClInclude Include="seek_forward_head_of_line_test.hpp" />
-    <ClInclude Include="seek_test.hpp" />
-    <ClInclude Include="seek_to_end_test.hpp" />
-    <ClInclude Include="take_array_object_test.hpp" />
-    <ClInclude Include="take_boolean_object_test.hpp" />
-    <ClInclude Include="take_dictionary_object_test.hpp" />
-    <ClInclude Include="take_hexadecimal_string_test.hpp" />
-    <ClInclude Include="take_indirect_reference_test.hpp" />
-    <ClInclude Include="take_integer_object_test.hpp" />
-    <ClInclude Include="take_literal_string_test.hpp" />
-    <ClInclude Include="take_name_object_test.hpp" />
-    <ClInclude Include="take_null_object_test.hpp" />
-    <ClInclude Include="take_real_object_test.hpp" />
-    <ClInclude Include="take_stream_object_test.hpp" />
-    <ClInclude Include="take_object_test.hpp" />
-    <ClInclude Include="take_footer_test.hpp" />
-    <ClInclude Include="take_indirect_object_test.hpp" />
-    <ClInclude Include="take_token_test.hpp" />
-    <ClInclude Include="take_trailer_test.hpp" />
-    <ClInclude Include="take_xref_entry_test.hpp" />
-    <ClInclude Include="take_xref_table_test.hpp" />
-    <ClInclude Include="tell_test.hpp" />
+    <ClCompile Include="operator++_test.cpp" />
+    <ClCompile Include="no_token.cpp" />
     <ClInclude Include="testtool.h" />
   </ItemGroup>
   <ItemGroup>
