--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
@@ -38,115 +38,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="take_footer_test.hpp">
-      <Filter>tests\ipdfstream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_trailer_test.hpp">
-      <Filter>tests\ipdfstream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_xref_entry_test.hpp">
-      <Filter>tests\ipdfstream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_xref_table_test.hpp">
-      <Filter>tests\ipdfstream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_array_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_boolean_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_dictionary_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_hexadecimal_string_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_indirect_reference_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_integer_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_literal_string_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_name_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_null_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_real_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_stream_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="take_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
     <ClInclude Include="literal_trim.hpp">
       <Filter>tools</Filter>
     </ClInclude>
     <ClInclude Include="testtool.h">
       <Filter>tools</Filter>
     </ClInclude>
-    <ClInclude Include="attempt_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="ignore_if_present_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="seek_forward_head_of_line_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="seek_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="seek_to_end_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="tell_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="peek_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="eof_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="operator++_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="promise_test.hpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="attempt_token_test.hpp">
-      <Filter>tests\tokenizer</Filter>
-    </ClInclude>
-    <ClInclude Include="promise_token_test.hpp">
-      <Filter>tests\tokenizer</Filter>
-    </ClInclude>
-    <ClInclude Include="take_token_test.hpp">
-      <Filter>tests\tokenizer</Filter>
-    </ClInclude>
     <ClInclude Include="get_test.cpp">
-      <Filter>tests\istream_extended</Filter>
-    </ClInclude>
-    <ClInclude Include="no_token.hpp">
-      <Filter>tests\tokenizer</Filter>
-    </ClInclude>
-    <ClInclude Include="get_pages_test.hpp">
-      <Filter>tests\document_reader</Filter>
-    </ClInclude>
-    <ClInclude Include="get_contents_test.hpp">
-      <Filter>tests\contents_parser</Filter>
-    </ClInclude>
-    <ClInclude Include="take_indirect_object_test.hpp">
-      <Filter>tests\object_stream</Filter>
-    </ClInclude>
-    <ClInclude Include="length_test.hpp">
       <Filter>tests\istream_extended</Filter>
     </ClInclude>
     <ClInclude Include="AssertThrows.hpp">
@@ -270,6 +168,12 @@
     </ClCompile>
     <ClCompile Include="onstream_dictionary_object_test.cpp">
       <Filter>tests\object_types</Filter>
+    </ClCompile>
+    <ClCompile Include="operator++_test.cpp">
+      <Filter>tests\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="no_token.cpp">
+      <Filter>tests\tokenizer</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
