サイドメニューの作成

--- a/PDFReader/PDFReader.csproj
+++ b/PDFReader/PDFReader.csproj
@@ -8,7 +8,36 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PDFReaderViewModel\PDFReaderViewModel.fsproj" />
+    <None Remove="Resources\export_to_image.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SharpVectors" Version="1.7.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExportToImage\ExportToImage.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\export_to_image.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
