--- a/ExportToImage/ExportToImage.csproj
+++ b/ExportToImage/ExportToImage.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.WindowsAPICodePack-Shell" Version="1.1.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     <PackageReference Include="MuPDFCore" Version="1.4.0" />
+    <PackageReference Include="ReactiveProperty.WPF" Version="8.0.3" />
     <PackageReference Include="SharpVectors" Version="1.7.7" />
   </ItemGroup>
 
